# otpd

./: COPYING  LICENSE.TRID  Makefile.in  NEWS  README  README.API  README.LICENSE  accept_thread.c  bitmanip.h  cardops.h  config.l  config.y  configure  configure.ac  extern.h  failover_thread.c  gsm.h  gsmd.c  helix.c  helix.h  hex.pl  hotp.c  hotp.pl  ident.h  lock.c  lock.h  main.c  main.h  mlog.c  nonce.c  otp.c  otp.h  otpauth.c  otpd.8  otpd.8.pod  otpd.conf  otppasswd.5  otppasswd.5.pod  resynctool.8  resynctool.8.pod  (+13 more)
cardops/: c200.c  c200.h  cryptocard.c  cryptocard.h  hotp.c  hotp.h  totp.c  totp.h  trid.o.i386-pc-solaris2.10  trid.o.i386-redhat-linux-gnu  trid.o.i686-pc-linux-gnu  trid.o.sparc-sun-solaris2.10  x99.c  x99.h
debian/: changelog  conffiles  control  copyright  dirs  docs  otpd.default  otpd.init  rules
debian/patches/: ldap_user_not_found  pid-file-support  series  strncmp_error
openldap-2.3.32/: configure
openldap-2.3.32/include/: ldap_queue.h  lutil.h
openldap-2.3.32/libraries/libldap/: Makefile.in  filter.c  os-local.c  result.c  tls.c
openldap-2.3.32/libraries/liblutil/: getpeereid.c
redhat/: otpd.init.in  otpd.spec
solaris/: manifest.in
userops/: file.c  file.h  ldap.c  ldap.h  otp.schema  schema2ad
